--- a/app/views/multimedias/new.html.erb
+++ b/app/views/multimedias/new.html.erb
@@ -1,3 +1,20 @@
+<!--
+
+Copyright (c) 2011 Prabhat Gupta(prabhatgupta.webs.com | golygon.com)
+
+This script may be used for non-commercial purposes only. For any
+commercial purposes, please contact the author at prabhat@golygon.com
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
+OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
+OTHER DEALINGS IN THE SOFTWARE.
+
+-->
 <div id="upload_video">
     <div class="field">
      <form action='' id="youtube_video_upload" method="post" enctype="multipart/form-data">
